--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <title>Moody Humans</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./style.css">
+  <link href="img/favicon.png" rel="shortcut icon" type="image/x-icon" />
+	<link href="img/favicon.png" rel="apple-touch-icon" />
 </head>
 
 <body>
@@ -18,8 +20,10 @@
 
   <div class="cards">
     <div class="card">
-      <div class="slide">Some notes </div>
-      <div class="title">ONE</div>
+      <div class="slide">
+        <div class="text">Notes</div>
+      </div>
+      <div class="title">Granaina</div>
       <div class="text-s-right">Guitar</div>
       <div class="text-s">
         <h4 class="jsx-1746282597 category text-xs">Sound</h4>
@@ -32,131 +36,156 @@
         <source src="audio/gradaina-1.mp3" controls>
         </source>
       </audio>
+    </div>
 
-    </div>
     <div class="card">
-      <div class="slide">Some notes </div>
-      <div class="title">ONE</div>
+      <div class="slide">Granaina</div>
+      <div class="title">Granaina</div>
+      <div class="text-s-right">Guitar</div>
+      <div class="text-s">
+        <h4 class="jsx-1746282597 category text-xs">Sound</h4>
+      </div>
+      <audio id="song" controls preload="auto" allow="autoplay">
+        <source src="audio/gradaina.mp3" controls>
+        </source>
+      </audio>
+      <audio id="song-preview" controls preload="auto" muted="muted" allow="autoplay">
+        <source src="audio/gradaina-1.mp3" controls>
+        </source>
+      </audio>
+    </div>
 
-    </div>
+
     <div class="card">
-      <div class="slide">Some notes </div>
-      <div class="title">ONE</div>
-      <audio id="beep" controls preload="auto">
-        <source src="audio/beep.mp3" controls>
+      <div class="slide">Granaina</div>
+      <div class="title">Granaina</div>
+      <div class="text-s-right">Guitar</div>
+      <div class="text-s">
+        <h4 class="jsx-1746282597 category text-xs">Sound</h4>
+      </div>
+      <audio id="song" controls preload="auto" allow="autoplay">
+        <source src="audio/gradaina.mp3" controls>
         </source>
-        <source src="audio/beep.ogg" controls>
+      </audio>
+      <audio id="song-preview" controls preload="auto" muted="muted" allow="autoplay">
+        <source src="audio/gradaina-1.mp3" controls>
         </source>
       </audio>
     </div>
+
+
     <div class="card">
-      <div class="slide">Some notes </div>
-      <div class="title">ONE</div>
-      <audio id="beep" controls preload="auto">
-        <source src="audio/beep.mp3" controls>
+      <div class="slide">Granaina</div>
+      <div class="title">Granaina</div>
+      <div class="text-s-right">Guitar</div>
+      <div class="text-s">
+        <h4 class="jsx-1746282597 category text-xs">Sound</h4>
+      </div>
+      <audio id="song" controls preload="auto" allow="autoplay">
+        <source src="audio/gradaina.mp3" controls>
         </source>
-        <source src="audio/beep.ogg" controls>
+      </audio>
+      <audio id="song-preview" controls preload="auto" muted="muted" allow="autoplay">
+        <source src="audio/gradaina-1.mp3" controls>
         </source>
       </audio>
     </div>
+
+
+
     <div class="card">
-      <div class="slide">Some notes </div>
-      <div class="title">ONE</div>
-      <audio id="beep" controls preload="auto">
-        <source src="audio/beep.mp3" controls>
+      <div class="slide">Granaina</div>
+      <div class="title">Granaina</div>
+      <div class="text-s-right">Guitar</div>
+      <div class="text-s">
+        <h4 class="jsx-1746282597 category text-xs">Sound</h4>
+      </div>
+      <audio id="song" controls preload="auto" allow="autoplay">
+        <source src="audio/gradaina.mp3" controls>
         </source>
-        <source src="audio/beep.ogg" controls>
+      </audio>
+      <audio id="song-preview" controls preload="auto" muted="muted" allow="autoplay">
+        <source src="audio/gradaina-1.mp3" controls>
         </source>
       </audio>
     </div>
+
+
+
     <div class="card">
-      <div class="slide">Some notes </div>
-      <div class="title">ONE</div>
-      <audio id="beep" controls preload="auto">
-        <source src="audio/beep.mp3" controls>
+      <div class="slide">Granaina</div>
+      <div class="title">Granaina</div>
+      <div class="text-s-right">Guitar</div>
+      <div class="text-s">
+        <h4 class="jsx-1746282597 category text-xs">Sound</h4>
+      </div>
+      <audio id="song" controls preload="auto" allow="autoplay">
+        <source src="audio/gradaina.mp3" controls>
         </source>
-        <source src="audio/beep.ogg" controls>
+      </audio>
+      <audio id="song-preview" controls preload="auto" muted="muted" allow="autoplay">
+        <source src="audio/gradaina-1.mp3" controls>
         </source>
       </audio>
     </div>
+
+
+
     <div class="card">
-      <div class="slide">Some notes </div>
-      <div class="title">ONE</div>
-      <audio id="beep" controls preload="auto">
-        <source src="audio/beep.mp3" controls>
+      <div class="slide">Granaina</div>
+      <div class="title">Granaina</div>
+      <div class="text-s-right">Guitar</div>
+      <div class="text-s">
+        <h4 class="jsx-1746282597 category text-xs">Sound</h4>
+      </div>
+      <audio id="song" controls preload="auto" allow="autoplay">
+        <source src="audio/gradaina.mp3" controls>
         </source>
-        <source src="audio/beep.ogg" controls>
+      </audio>
+      <audio id="song-preview" controls preload="auto" muted="muted" allow="autoplay">
+        <source src="audio/gradaina-1.mp3" controls>
         </source>
       </audio>
     </div>
+
+
+
     <div class="card">
-      <div class="slide">Some notes </div>
-      <div class="title">ONE</div>
-      <audio id="beep" controls preload="auto">
-        <source src="audio/beep.mp3" controls>
+      <div class="slide"></div>
+      <div class="title">Granaina</div>
+      <div class="text-s-right">Guitar</div>
+      <div class="text-s">
+        <h4 class="jsx-1746282597 category text-xs">Sound</h4>
+      </div>
+      <audio id="song" controls preload="auto" allow="autoplay">
+        <source src="audio/gradaina.mp3" controls>
         </source>
-        <source src="audio/beep.ogg" controls>
+      </audio>
+      <audio id="song-preview" controls preload="auto" muted="muted" allow="autoplay">
+        <source src="audio/gradaina-1.mp3" controls>
         </source>
       </audio>
     </div>
+
+
     <div class="card">
-      <div class="slide">Some notes </div>
-      <div class="title">ONE</div>
-      <audio id="beep" controls preload="auto">
-        <source src="audio/beep.mp3" controls>
+      <div class="slide">Granaina</div>
+      <div class="title">Granaina</div>
+      <div class="text-s-right">Guitar</div>
+      <div class="text-s">
+        <h4 class="jsx-1746282597 category text-xs">Sound</h4>
+      </div>
+      <audio id="song" controls preload="auto" allow="autoplay">
+        <source src="audio/gradaina.mp3" controls>
         </source>
-        <source src="audio/beep.ogg" controls>
+      </audio>
+      <audio id="song-preview" controls preload="auto" muted="muted" allow="autoplay">
+        <source src="audio/gradaina-1.mp3" controls>
         </source>
       </audio>
     </div>
-    <div class="card">
-      <div class="slide">Some notes </div>
-      <div class="title">ONE</div>
-      <audio id="beep" controls preload="auto">
-        <source src="audio/beep.mp3" controls>
-        </source>
-        <source src="audio/beep.ogg" controls>
-        </source>
-      </audio>
-    </div>
-    <div class="card">
-      <div class="slide">Some notes </div>
-      <div class="title">ONE</div>
-      <audio id="beep" controls preload="auto">
-        <source src="audio/beep.mp3" controls>
-        </source>
-        <source src="audio/beep.ogg" controls>
-        </source>
-      </audio>
-    </div>
-    <div class="card">
-      <div class="slide">Some notes </div>
-      <div class="title">ONE</div>
-      <audio id="beep" controls preload="auto">
-        <source src="audio/beep.mp3" controls>
-        </source>
-        <source src="audio/beep.ogg" controls>
-        </source>
-      </audio>
-    </div>
-    <div class="card">
-      <div class="slide">Some notes </div>
-      <div class="title">ONE</div>
-      <audio id="beep" controls preload="auto">
-        <source src="https://hii-mag.com/audio/fx/real/HII_UI_realsounds_play.wav" controls>
-        </source>
-      </audio>
-    </div>
-    <div class="card">
-      <div class="slide">Some notes </div>
-      <div class="title">ONE</div>
-      <audio id="beep" controls preload="auto">
-        <source src="audio/beep.mp3" controls>
-        </source>
-        <source src="audio/beep.ogg" controls>
-        </source>
-      </audio>
-    </div>
+
+
   </div>
 
   <script>
