--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       </div>
       <div class="title">Granaina</div>
       <div class="text-s-right">Guitar</div>
-      <div class="text-s">
+      <!-- <div class="text-s">
         <h4 class="jsx-1746282597 category text-xs">Sound</h4>
-      </div>
+      </div> -->
       <audio id="song" controls preload="auto" allow="autoplay">
         <source src="audio/gradaina.mp3" controls>
         </source>
