--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="text"></div>
       </div>
       <div class="title">Granaina</div>
-      <div class="text-s-right">Guitar</div>
+      <div class="text-s-right">Flamenco</div>
       <!-- <div class="text-s">
         <h4 class="jsx-1746282597 category text-xs">Sound</h4>
       </div> -->
@@ -40,10 +40,10 @@
 
     <div class="card">
       <div class="slide">
-        <div class="text">Notes</div>
+        <div class="text"></div>
       </div>
-      <div class="title">Granaina</div>
-      <div class="text-s-right">Guitar</div>
+      <div class="title">La Feria</div>
+      <div class="text-s-right">Flamenco</div>
       <!-- <div class="text-s">
         <h4 class="jsx-1746282597 category text-xs">Sound</h4>
       </div> -->
@@ -59,10 +59,10 @@
 
     <div class="card">
       <div class="slide">
-        <div class="text">Notes</div>
+        <div class="text"></div>
       </div>
-      <div class="title">Granaina</div>
-      <div class="text-s-right">Guitar</div>
+      <div class="title">Las Ondas</div>
+      <div class="text-s-right">Flamenco</div>
       <!-- <div class="text-s">
         <h4 class="jsx-1746282597 category text-xs">Sound</h4>
       </div> -->
