--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       current = play;
       play.play();
       const elem = $(event.target);
-      current = elem.parent().find("#song-preview")[0];
+      current = elem.parent().find("#song")[0];
       current.play();
     });
   </script>
