--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     const play = $("#play")[0];
     $(".card").click((event) => {
       if (current) {
-        current.pause();
+        //current.pause();
       }
       current = play;
       play.play();
