--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <div class="text"></div>
       </div>
       <div class="title">Granaina</div>
-      <div class="text-s-right">Flamenco</div>
-      <!-- <div class="text-s">
-        <h4 class="jsx-1746282597 category text-xs">Sound</h4>
-      </div> -->
+      <div class="text-s-right"> 7.27.2022</div>
+      <div class="text-s">
+        <h4 class="jsx-1746282597 category text-xs">Flamenco</h4>
+      </div>
       <audio id="song" controls preload="auto" allow="autoplay">
         <source src="audio/gradaina.mp3" controls>
         </source>
@@ -43,10 +43,10 @@
         <div class="text"></div>
       </div>
       <div class="title">La Feria</div>
-      <div class="text-s-right">Flamenco</div>
-      <!-- <div class="text-s">
-        <h4 class="jsx-1746282597 category text-xs">Sound</h4>
-      </div> -->
+      <div class="text-s-right"> 7.27.2022</div>
+      <div class="text-s">
+        <h4 class="jsx-1746282597 category text-xs">Flamenco</h4>
+      </div>
       <audio id="song" controls preload="auto" allow="autoplay">
         <source src="audio/gradaina.mp3" controls>
         </source>
@@ -62,10 +62,10 @@
         <div class="text"></div>
       </div>
       <div class="title">Las Ondas</div>
-      <div class="text-s-right">Flamenco</div>
-      <!-- <div class="text-s">
-        <h4 class="jsx-1746282597 category text-xs">Sound</h4>
-      </div> -->
+      <div class="text-s-right"> 7.27.2022</div>
+      <div class="text-s">
+        <h4 class="jsx-1746282597 category text-xs">Flamenco</h4>
+      </div>
       <audio id="song" controls preload="auto" allow="autoplay">
         <source src="audio/gradaina.mp3" controls>
         </source>
@@ -132,8 +132,6 @@
         </source>
       </audio>
     </div>
-
-
   </div>
 
   <script>
