--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="title">Granaina</div>
       <div class="text-s-right"> 7.27.2022</div>
       <div class="text-s">
-        <h4 class="jsx-1746282597 category text-xs">Flamenco</h4>
+        <h4 class="jsx-1746282597 category text-xs">Flamenco Guitar</h4>
       </div>
       <audio id="song" controls preload="auto" allow="autoplay">
         <source src="audio/gradaina.mp3" controls>
@@ -45,7 +45,7 @@
       <div class="title">La Feria</div>
       <div class="text-s-right"> 7.27.2022</div>
       <div class="text-s">
-        <h4 class="jsx-1746282597 category text-xs">Flamenco</h4>
+        <h4 class="jsx-1746282597 category text-xs">Flamenco Guitar</h4>
       </div>
       <audio id="song" controls preload="auto" allow="autoplay">
         <source src="audio/gradaina.mp3" controls>
@@ -64,7 +64,7 @@
       <div class="title">Las Ondas</div>
       <div class="text-s-right"> 7.27.2022</div>
       <div class="text-s">
-        <h4 class="jsx-1746282597 category text-xs">Flamenco</h4>
+        <h4 class="jsx-1746282597 category text-xs">Flamenco Guitar</h4>
       </div>
       <audio id="song" controls preload="auto" allow="autoplay">
         <source src="audio/gradaina.mp3" controls>
