--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </source>
       </audio>
       <audio id="song-preview" controls preload="auto" muted="muted" allow="autoplay">
-        <source src="audio/gradaina-1.mp3" controls>
+        <source src="audio/gradaina.mp3" controls>
         </source>
       </audio>
     </div>
@@ -52,7 +52,7 @@
         </source>
       </audio>
       <audio id="song-preview" controls preload="auto" muted="muted" allow="autoplay">
-        <source src="audio/gradaina-1.mp3" controls>
+        <source src="audio/gradaina.mp3" controls>
         </source>
       </audio>
     </div>
@@ -71,7 +71,7 @@
         </source>
       </audio>
       <audio id="song-preview" controls preload="auto" muted="muted" allow="autoplay">
-        <source src="audio/gradaina-1.mp3" controls>
+        <source src="audio/gradaina.mp3" controls>
         </source>
       </audio>
     </div>
@@ -109,7 +109,7 @@
         </source>
       </audio>
       <audio id="song-preview" controls preload="auto" muted="muted" allow="autoplay">
-        <source src="audio/gradaina-1.mp3" controls>
+        <source src="audio/gradaina.mp3" controls>
         </source>
       </audio>
     </div>
@@ -128,7 +128,7 @@
         </source>
       </audio>
       <audio id="song-preview" controls preload="auto" muted="muted" allow="autoplay">
-        <source src="audio/gradaina-1.mp3" controls>
+        <source src="audio/gradaina.mp3" controls>
         </source>
       </audio>
     </div>
