--- a/index.html
+++ b/index.html
@@ -23,16 +23,12 @@
       <div class="slide">
         <div class="text"></div>
       </div>
-      <div class="title">Granaina</div>
-      <div class="text-s-right"> 7.27.2022</div>
-      <div class="text-s">
-        <h4 class="jsx-1746282597 category text-xs">Flamenco Guitar</h4>
+      <div class="text-s-right">7.27.2022</div>
+      <div class="title">
+        <div class="text-xs">Flamenco Guitar</div>
+        <div>Granaina</div>
       </div>
       <audio id="song" controls preload="auto" allow="autoplay">
-        <source src="audio/gradaina.mp3" controls>
-        </source>
-      </audio>
-      <audio id="song-preview" controls preload="auto" muted="muted" allow="autoplay">
         <source src="audio/gradaina.mp3" controls>
         </source>
       </audio>
@@ -42,16 +38,12 @@
       <div class="slide">
         <div class="text"></div>
       </div>
-      <div class="title">La Feria</div>
-      <div class="text-s-right"> 7.27.2022</div>
-      <div class="text-s">
-        <h4 class="jsx-1746282597 category text-xs">Flamenco Guitar</h4>
+      <div class="text-s-right">7.27.2022</div>
+      <div class="title">
+        <div class="text-xs">Flamenco Guitar</div>
+        <div>Granaina</div>
       </div>
       <audio id="song" controls preload="auto" allow="autoplay">
-        <source src="audio/gradaina.mp3" controls>
-        </source>
-      </audio>
-      <audio id="song-preview" controls preload="auto" muted="muted" allow="autoplay">
         <source src="audio/gradaina.mp3" controls>
         </source>
       </audio>
@@ -61,16 +53,12 @@
       <div class="slide">
         <div class="text"></div>
       </div>
-      <div class="title">Las Ondas</div>
-      <div class="text-s-right"> 7.27.2022</div>
-      <div class="text-s">
-        <h4 class="jsx-1746282597 category text-xs">Flamenco Guitar</h4>
+      <div class="text-s-right">7.27.2022</div>
+      <div class="title">
+        <div class="text-xs">Flamenco Guitar</div>
+        <div>Granaina</div>
       </div>
       <audio id="song" controls preload="auto" allow="autoplay">
-        <source src="audio/gradaina.mp3" controls>
-        </source>
-      </audio>
-      <audio id="song-preview" controls preload="auto" muted="muted" allow="autoplay">
         <source src="audio/gradaina.mp3" controls>
         </source>
       </audio>
@@ -78,37 +66,14 @@
 
     <div class="card">
       <div class="slide">
-        <div class="text">Notes</div>
+        <div class="text"></div>
       </div>
-      <div class="title">Granaina</div>
-      <div class="text-s-right">Guitar</div>
-      <!-- <div class="text-s">
-        <h4 class="jsx-1746282597 category text-xs">Sound</h4>
-      </div> -->
-      <audio id="song" controls preload="auto" allow="autoplay">
-        <source src="audio/gradaina.mp3" controls>
-        </source>
-      </audio>
-      <audio id="song-preview" controls preload="auto" muted="muted" allow="autoplay">
-        <source src="audio/gradaina-1.mp3" controls>
-        </source>
-      </audio>
-    </div>
-
-    <div class="card">
-      <div class="slide">
-        <div class="text">Notes</div>
+      <div class="text-s-right">7.27.2022</div>
+      <div class="title">
+        <div class="text-xs">Flamenco Guitar</div>
+        <div>Granaina</div>
       </div>
-      <div class="title">Granaina</div>
-      <div class="text-s-right">Guitar</div>
-      <!-- <div class="text-s">
-        <h4 class="jsx-1746282597 category text-xs">Sound</h4>
-      </div> -->
       <audio id="song" controls preload="auto" allow="autoplay">
-        <source src="audio/gradaina.mp3" controls>
-        </source>
-      </audio>
-      <audio id="song-preview" controls preload="auto" muted="muted" allow="autoplay">
         <source src="audio/gradaina.mp3" controls>
         </source>
       </audio>
@@ -116,22 +81,19 @@
 
     <div class="card">
       <div class="slide">
-        <div class="text">Notes</div>
+        <div class="text"></div>
       </div>
-      <div class="title">Granaina</div>
-      <div class="text-s-right">Guitar</div>
-      <!-- <div class="text-s">
-        <h4 class="jsx-1746282597 category text-xs">Sound</h4>
-      </div> -->
+      <div class="text-s-right">7.27.2022</div>
+      <div class="title">
+        <div class="text-xs">Flamenco Guitar</div>
+        <div>Granaina</div>
+      </div>
       <audio id="song" controls preload="auto" allow="autoplay">
         <source src="audio/gradaina.mp3" controls>
         </source>
       </audio>
-      <audio id="song-preview" controls preload="auto" muted="muted" allow="autoplay">
-        <source src="audio/gradaina.mp3" controls>
-        </source>
-      </audio>
     </div>
+
   </div>
 
   <script>
