--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       play.play();
       video.attr("src", "https://upload.wikimedia.org/wikipedia/commons/transcoded/5/54/Yawning_kitten.ogv/Yawning_kitten.ogv.480p.vp9.webm");
       video.show();
-      video.trigger('play');
+      document.getElementById("video").play();
       //const elem = $(event.target);
       //current = elem.parent().find("#song")[0];
       //current.play();
