--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
    <source type="video/webm">
   </video>
 
+  <a href="http://www.chunwang.art" target="_blank">
+    about
+  </a>
+  
   <script>
     let video = $("#video");
     video.hide();
