--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
   <a href="http://www.chunwang.art" target="_blank">
     about
   </a>
-  
+
   <script>
     let video = $("#video");
     video.hide();
     const play = $("#play")[0];
     $(".card").click((event) => {
       play.play();
-      video.attr("src", "https://fei-tian.s3.us-east-2.amazonaws.com/videoplayback%20%282%29.mp4?response-content-disposition=inline&X-Amz-Security-Token=IQoJb3JpZ2luX2VjEJf%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEaCXVzLWVhc3QtMSJHMEUCIHNrCbKxidZG5fO9icHNZvoI%2B%2FSyQpdVtK9CADNGRBCmAiEA37ZVamzzNRS%2Bmleks896iMl7dFzsCrlPpIKAVPsz6EMq7QII4P%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FARACGgw2MzE5OTM0NDYxMTEiDIUv7ge37ApcvOLfsirBAtGJJuOrqYmK0jiuNsHMdBTldxYqrJLh%2Bb49XwPfXNtNWqir9uMmbxkE%2F3grPdG5Jswzpe0J3Ua1py9978LPXYHIo5SbO%2FbkS%2FPhW1eUuDXY8N7rmeF%2Bj5OqkXFlX7n%2Fi3HgTTRd1IUEuky%2BMP2SuJJA%2Bdm5FHqLD4HiWAniO65mGfxRck0%2B9GuImCRJK7Jo7uTiJl2pw3MB31fUAC3ue%2FycO%2B96eLUam8B9PFB4B55strtLZSEYGWxCNyrCPnXm6IyWwS3RLFZIeYmAIvDTj6UEuhsdt7XCrQFgQKEvtRbPiZUfi6Iv40WEvJH0Eg%2BQL%2FYbtkN1GAs2A%2Bw%2BRMv9gV18AKUU6rgjogDCLU%2F6g83Fps29a0w7hFg5Qx9KGz6%2BM%2FUB7XxWGb8YgPot5O%2BPA0q97BXYXjZiUMD7nd9BH3%2Fk8jD3%2F4aXBjqzAh9DEyfY0ZlpufZyIkx8tMzlXkFnmxH3JGDHa8SVXw3UK3cJHL20koXKh2co8JSZwOsTeaGg%2FK8jSqpfYTsA3F6RdVzX9HDw3bcPOiK5DjlfbBpI%2F9H4kc3FYKrwJ7JGYBwoXfRCgVG9SmPvOriOBuCgp202rXUGUAlN4LAPCkRw0jcmCaMaCjpm7b2NScGjWGyK%2BXOM8U8Eh8d3wHWmu%2F5TPAOL%2FVm%2Bg3vMDYVK%2FdYyykBGs74eHm4PCaihl0vfxvzHuLETsMe68G05lJ%2FGwl3CkNvVgkpz3LYKGZLs20bKPa4TTp8N%2FsurnRR52UTr3BS%2BjjYPTjkFbGURzAMU7puCT6mgLm4%2FtUH7MsdXXUBw2qGGOJHVcawU3czpPYe12%2BQUJig6jDQxwutFQiG60G4WjB0%3D&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20220727T224847Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Credential=ASIAZGJN6V3PWSGQZKOC%2F20220727%2Fus-east-2%2Fs3%2Faws4_request&X-Amz-Signature=555e3d8d5d4d41ff23b2f93a6dacdda1037c53b4b80bfd871065fe02aa1b5324");
+      video.attr("src", "https://camlab-cave-dance.oss-cn-hongkong.aliyuncs.com/assets/video/d2_3_.mp4");
       video.show();
       document.getElementById("video").play();
       //const elem = $(event.target);
